--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,11 +30,13 @@
                 android:layout_height="wrap_content"
                 android:text="Kalender"
                 android:onClick="tampilKalender"/>
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="500dp"
-                android:text="Browser"
-                android:onClick="tampilBrowser"/>
+                android:onClick="tampilBrowser"
+                android:text="Browser" />
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -81,5 +83,5 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:text="Ini layar YouTube"
-        android:gravity="center"></TextView>
+        android:gravity="center"/>
 </LinearLayout>
