--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,6 +9,9 @@
     android:padding="10dp"
     tools:context=".MainActivity">
     <ScrollView
+        android:id="@+id/intent_menu"
+        app:layout_constraintHeight_percent="0.5"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
@@ -20,67 +23,90 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Telepon"
+                app:icon="@drawable/call_24px"
                 android:onClick="tampilTelepon" />
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="SMS"
+                app:icon="@drawable/sms_24px"
                 android:onClick="tampilSms"/>
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Kalender"
+                app:icon="@drawable/calendar_month_24px"
                 android:onClick="tampilKalender"/>
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:onClick="tampilBrowser"
+                app:icon="@drawable/language_24px"
                 android:text="Browser" />
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Kalkulator"
+                app:icon="@drawable/calculate_24px"
                 android:onClick="tampilKalkulator"/>
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Kontak"
+                app:icon="@drawable/contacts_24px"
                 android:onClick="tampilKontak"/>
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Galeri"
+                app:icon="@drawable/gallery_thumbnail_24px"
                 android:onClick="tampilGaleri"/>
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="WiFi"
+                app:icon="@drawable/wifi_24px"
                 android:onClick="tampilWifi"/>
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Sound"
+                app:icon="@drawable/volume_up_24px"
                 android:onClick="tampilSound"/>
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Airplane Mode"
+                app:icon="@drawable/flight_24px"
                 android:onClick="tampilAirplane"/>
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Aplikasi"
+                app:icon="@drawable/settings_24px"
                 android:onClick="tampilAplikasi"/>
             <com.google.android.material.button.MaterialButton
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Bluetooth"
+                app:icon="@drawable/bluetooth_24px"
                 android:onClick="tampilBluetooth"/>
         </LinearLayout>
     </ScrollView>
-    <TextView
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/intent_menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:src="@drawable/gedung_baru_scaled_e1648604712820"
+        />
+    <TextView
+        app:layout_constraintTop_toBottomOf="@id/intent_menu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.5"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
         android:text="Ini layar YouTube"
         android:gravity="center"/>
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
